--- a/docs/notebooks/intro.ipynb
+++ b/docs/notebooks/intro.ipynb
@@ -20,6 +20,7 @@
    "outputs": [],
    "source": [
     "import gdsfactory as gf\n",
+    "import sky130\n",
     "import sky130.components as sc\n",
     "import sky130.tech as st"
    ]
@@ -42,7 +43,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scene = c.to_3d()\n",
+    "#scene = c.to_3d()\n",
+    "scene = gf.export.to_3d(c, layer_colors=sky130.layers.LAYER_COLORS)\n",
     "scene.show()"
    ]
   },
@@ -91,7 +93,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scene = c.to_3d()\n",
+    "#scene = c.to_3d()\n",
+    "scene = gf.export.to_3d(c, layer_colors=sky130.layers.LAYER_COLORS)\n",
     "scene.show()"
    ]
   },
