--- a/docs/notebooks/intro.ipynb
+++ b/docs/notebooks/intro.ipynb
@@ -43,8 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#scene = c.to_3d()\n",
-    "scene = gf.export.to_3d(c, layer_colors=sky130.layers.LAYER_COLORS)\n",
+    "scene = c.to_3d()\n",
     "scene.show()"
    ]
   },
@@ -93,8 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#scene = c.to_3d()\n",
-    "scene = gf.export.to_3d(c, layer_colors=sky130.layers.LAYER_COLORS)\n",
+    "scene = c.to_3d()\n",
     "scene.show()"
    ]
   },
