--- a/docs/notebooks/intro.ipynb
+++ b/docs/notebooks/intro.ipynb
@@ -5,7 +5,7 @@
    "id": "00f7c03e-4b7f-473c-9646-429b0fbb45a8",
    "metadata": {},
    "source": [
-    "# Skywater 130 gdsfactory pdk\n",
+    "# Layout\n",
     "\n",
     "## Layout driven flow\n",
     "\n",
