--- a/docs/notebooks/intro.ipynb
+++ b/docs/notebooks/intro.ipynb
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c = gf.Component()\n",
+    "c = gf.Component('demo_connect')\n",
     "g1 = c << sc.sky130_fd_sc_hd__a2111o_1()\n",
     "g2 = c << sc.sky130_fd_sc_hd__a311oi_4()\n",
     "g2.move((15, 10))\n",
