--- a/docs/notebooks/intro.ipynb
+++ b/docs/notebooks/intro.ipynb
@@ -76,11 +76,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c = gf.Component('demo_connect')\n",
+    "c = gf.Component(\"demo_connect\")\n",
     "g1 = c << sc.sky130_fd_sc_hd__a2111o_1()\n",
     "g2 = c << sc.sky130_fd_sc_hd__a311oi_4()\n",
     "g2.move((15, 10))\n",
-    "route = gf.routing.get_route_electrical(g1.ports['VPWR'], g2.ports['VPWR'], cross_section=st.xs_metal1)\n",
+    "route = gf.routing.get_route_electrical(\n",
+    "    g1.ports[\"VPWR\"], g2.ports[\"VPWR\"], cross_section=st.xs_metal1\n",
+    ")\n",
     "c.add(route.references)\n",
     "c"
    ]
