--- a/docs/notebooks/intro.ipynb
+++ b/docs/notebooks/intro.ipynb
@@ -194,7 +194,7 @@
     "c = gf.Component()\n",
     "g1 = c << sc.sky130_fd_sc_hd__a2111o_1()\n",
     "g2 = c << sc.sky130_fd_sc_hd__a311oi_4()\n",
-    "g2.move((15, 10))\n",
+    "g2.dmove((15, 10))\n",
     "c"
    ]
   },
@@ -208,8 +208,8 @@
     "c = gf.Component(\"demo_connect\")\n",
     "g1 = c << sc.sky130_fd_sc_hd__a2111o_1()\n",
     "g2 = c << sc.sky130_fd_sc_hd__a311oi_4()\n",
-    "g2.move((15, 10))\n",
-    "route = gf.routing.get_route_electrical(\n",
+    "g2.dmove((15, 10))\n",
+    "route = gf.routing.route_single_electrical(\n",
     "    g1.ports[\"VPWR\"], g2.ports[\"VPWR\"], cross_section=st.xs_metal1\n",
     ")\n",
     "c.add(route.references)\n",
